--- a/templates/travel/search_results.html
+++ b/templates/travel/search_results.html
@@ -1,7 +1,28 @@
 {% extends 'travel/base.html' %}
 {% load static %}
 
-{% block title %}Search Results - Frozen Kashmir{% endblock %}
+{% block title %}Search Kashmir Tours - Find Your Perfect Kashmir Package | Frozen Kashmir{% endblock %}
+
+{% block meta_description %}Search and find the perfect Kashmir tour package. Browse honeymoon packages, family tours,
+adventure trips, and luxury vacations. Filter by destination, price, duration, and activities.{% endblock %}
+
+{% block meta_keywords %}search Kashmir tours, find Kashmir package, Kashmir tour search, search Kashmir holiday, find
+Kashmir vacation, Kashmir package finder, Kashmir tour finder, search Gulmarg tours, search Pahalgam packages, search
+Srinagar tours, search Sonamarg trips, Kashmir honeymoon search, Kashmir family tour finder, Kashmir adventure search,
+Kashmir budget tour search, Kashmir luxury package finder, Kashmir skiing package search, Kashmir trekking tour finder,
+Kashmir houseboat search, Kashmir resort package finder, Kashmir hotel tour search, search Kashmir by price, Kashmir
+package by budget, Kashmir tour by duration, Kashmir 3 day search, Kashmir 5 day finder, Kashmir 7 day search, Kashmir
+weekend package finder, Kashmir short trip search, Kashmir long vacation finder, Kashmir group tour search, Kashmir
+private tour finder, Kashmir customized package search, Kashmir all inclusive finder, search Kashmir with hotel, Kashmir
+with meals search, Kashmir transport package finder, Kashmir airport transfer search, Kashmir sightseeing tour finder,
+Kashmir guided tour search, Kashmir local tour finder, Kashmir verified package search, Kashmir rated tour finder,
+Kashmir recommended package search, Kashmir popular tour finder, Kashmir trending package search, Kashmir best deal
+finder, Kashmir discount package search, Kashmir offer tour finder, Kashmir seasonal package search, Kashmir winter tour
+finder, Kashmir summer package search, Kashmir spring tour finder, Kashmir autumn package search, Kashmir festival tour
+finder, Kashmir Tulip festival search, Kashmir Shikara ride finder, Kashmir cable car tour search, Kashmir photography
+package finder, Kashmir Instagram tour search, Kashmir vlog location finder, Kashmir couple package search, Kashmir solo
+traveler finder, Kashmir senior tour search, Kashmir student package finder, Kashmir corporate tour search, Kashmir team
+outing finder, search by destination Kashmir, search by activity Kashmir, search by category Kashmir{% endblock %}
 
 {% block content %}
 <section class="section" style="padding-top: 6rem; min-height: 70vh;">
