--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <head>
+    <!-- Monetag Interstitial Ad -->
+    <script>(function (s) { s.dataset.zone = '10315782', s.src = 'https://groleegni.net/vignette.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBTV266EJP"></script>
     <script>
